<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nav_bar_color"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:text="@string/mutiara_elektrik_nav"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_drawer_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:text="@string/username_nav"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_drawer_roles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:text="@string/role_nav"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_drawer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:text="@string/email_nav"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:textStyle="bold"/>


</LinearLayout>