<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:backgroundTint="@color/background"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_cv_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/item_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:text="@string/stok"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

            <TextView
                android:id="@+id/tv_item_stock"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:text="@string/stock_placeholder"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_title_stock"
                app:layout_constraintTop_toBottomOf="@id/tv_title_stock" />

            <TextView
                android:id="@+id/tv_item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_type"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tv_item_name"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

            <TextView
                android:id="@+id/tv_title_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_item"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tv_item_type"
                app:layout_constraintTop_toBottomOf="@id/tv_item_type" />

            <TextView
                android:id="@+id/tv_item_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/item_brand"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/tv_title_brand"
                app:layout_constraintTop_toBottomOf="@id/tv_item_type" />

            <TextView
                android:id="@+id/tv_title_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_item_type"
                app:layout_constraintTop_toBottomOf="@id/tv_title_brand" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/price_placeholder"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_title_Price"
                app:layout_constraintTop_toBottomOf="@id/tv_item_brand" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card2"
            app:layout_constraintTop_toBottomOf="@id/top_cv_frame">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/bt_update_stock"
                    style="?attr/materialButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/card2"
                    android:text="@string/update_stock" />

                <Button
                    android:id="@+id/btn_delete_stock"
                    style="?attr/materialButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/card2"
                    android:text="@string/delete_stock" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>