<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="4dp">



        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:id="@+id/iv_icon_transaction"
            android:src="@drawable/baseline_attach_money_24"
            android:background="@color/background2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
       />

        <TextView
            app:layout_constraintTop_toTopOf="@id/iv_icon_transaction"
            app:layout_constraintStart_toEndOf="@id/iv_icon_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title_type"
            android:layout_marginStart="8dp"
            android:text="@string/jenis_transaksi"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_type"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/tv_title_type"
            android:text="@string/transaction_amount"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title_type"
            app:layout_constraintStart_toStartOf="@id/tv_title_type"
            android:text="@string/tipe_transaksi"
            android:id="@+id/tv_transaction_type"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_type"
            app:layout_constraintStart_toStartOf="@id/tv_transaction_type"
            android:text="@string/keterangan_transaksi"
            android:id="@+id/tv_transaction_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_transaction_date"
            android:text="@string/transaction_date"
            app:layout_constraintEnd_toEndOf="@id/tv_transaction_amount"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_description"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_date"
            android:layout_marginTop="4dp"
            app:tint="@color/background2"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>