<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_date"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_transaksi"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_transaction_date"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_date" />

        <TextView
            android:id="@+id/tv_transaction_amount_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@string/transaction_amount"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_type"
            app:layout_constraintTop_toTopOf="@id/tv_title_type" />

        <TextView
            android:id="@+id/tv_transaction_amount_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="5dp"
            android:text="@string/transaction_amount"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_transaction_amount_income"
            app:layout_constraintTop_toTopOf="@id/tv_transaction_amount_income" />

        <TextView
            android:id="@+id/tv_transaction_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan_transaksi"
            app:layout_constraintStart_toStartOf="@id/tv_title_type"
            app:layout_constraintTop_toBottomOf="@id/tv_title_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frame_content" />

</androidx.constraintlayout.widget.ConstraintLayout>