<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:backgroundTint="@color/background"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/card2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_cv_frame"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:background="@color/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stok"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/tv_item_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

                <TextView
                    android:id="@+id/tv_item_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_placeholder"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/tv_title_stock"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_stock" />

                <TextView
                    android:id="@+id/tv_title_Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_item_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/price_placeholder"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/tv_title_Price"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_name" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/bt_addtoSale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/card2"
                android:layout_marginStart="10dp"
                android:contentDescription="Button add to sale"
                android:src="@drawable/baseline_add_box_24"
                app:layout_constraintBottom_toBottomOf="@+id/input_itemQty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/input_itemQty"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>